package specification.creators;

import specification.SimulationSpecification;

public interface ISimulationSpecificationCreator {

	public SimulationSpecification[] createSpecifications();
	
}
