package sase.specification.creators;

public enum SpecificationCreatorTypes {
	NONE,
	CORRELATION_SELECTIVITY_ESTIMATION,
	DELTA_SELECTIVITY_ESTIMATION,
	CROSS_PRODUCT_SINGLE,
	STOCK_EVALUATION,
	CROSS_PRODUCT_MULTI_STOCK,
}
